# Image-frame-conversion

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  history.py  session.py  style.py  user.py
backend/app/routers/: auth.py  oss.py  session.py  style.py  styles.py
backend/app/schemas/: common.py  session.py  style.py  user.py
backend/app/services/: auth.py  session.py  style.py  style_service.py
backend/app/utils/: deps.py  oss.py  redis.py
backend/presets/: presets.json
frontend/: index.html  nginx.conf  package-lock.json  vite.config.js
frontend/src/: main.js  style.css
frontend/src/api/: auth.js  request.js  session.js  style.js  styles.js
frontend/src/layout/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  session.js
frontend/src/views/: ConvertView.vue  HistoryView.vue  LoginView.vue
