[project]
name = "backend"
version = "0.1.0"
description = "图片风格转换系统后端"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "asyncmy>=0.2.9",
    "redis>=5.0.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "PyJWT>=2.10.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "cryptography>=42.0.0",
]
